added ExtPwr status block

--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@ function onMessageArrived(message) {
 
     var timestamp = new Date().getTime(); //Unix timestamp in ms
 
+    if (type == 'alarm' && device == 'ExtPwr') {
+        $('#alarm_extpwr').html('(value: ' + payload + ')');
+        if (payload != 'on') {
+            $('#label_extpwr').text('Відсутнє');
+            $('#label_extpwr').removeClass('label-success').addClass('label-danger');
+        } else {
+            $('#label_extpwr').text('Наявне');
+            $('#label_extpwr').removeClass('label-danger').addClass('label-success');
+        }
+    }
     if (type == 'status' && device == 'Pump1') {
         $('#pump1').html('(value: ' + payload + ')');
         if (payload != 'on') {
@@ -157,35 +167,9 @@ function onMessageArrived(message) {
             }
         });
         break;
-    case 'basement':
-        $('#basementTempSensor').html('(Sensor value: ' + payload + ')');
-        if (payload >= 25) {
-                $('#basementTempLabel').text(payload + '°C - too hot');
-                $('#basementTempLabel').removeClass('label-warning label-success label-info label-primary').addClass('label-danger');
-        } else if (payload >= 21) {
-                $('#basementTempLabel').text(payload + '°C - hot');
-                $('#basementTempLabel').removeClass('label-danger label-success label-info label-primary').addClass('label-warning');
-        } else if (payload >= 18) {
-                $('#basementTempLabel').text(payload + '°C - normal');
-                $('#basementTempLabel').removeClass('label-danger label-warning label-info label-primary').addClass('label-success');
-        } else if (payload >= 15) {
-                $('#basementTempLabel').text(payload + '°C - low');
-                $('#basementTempLabel').removeClass('label-danger label-warning label-success label-primary').addClass('label-info');
-        } else if (mpayload <= 12) {
-                $('#basementTempLabel').text(payload + '°C - too low');
-                $('#basementTempLabel').removeClass('label-danger label-warning label-success label-info').addClass('label-primary');
-        basementTemp.push(parseInt(payload));
-        if (basementTemp.length >= 20) {
-            basementTemp.shift()
-        }
 
-        $('.basementTempSparkline').sparkline(basementTemp, {
-            type: 'line',
-            width: '160',
-            height: '40'});
-        }
+    default: console.log('Error: Data do not match the MQTT topic.');
         break;
-    default: console.log('Error: Data do not match the MQTT topic.'); break;
     }
 };
 
@@ -205,6 +189,11 @@ $(document).ready(function() {
               <div class="panel-body">
                     <table class="table table-striped">
                     <tr>
+                        <td width="40%" style="vertical-align:middle;"><h3>Зовнішнє живлення</h3><small id="alarm_extpwr">(no value recieved)</small></td>
+                        <td style="vertical-align:middle;"></td>
+                        <td width="30%" style="vertical-align:middle;"><h4>&nbsp;<span id="label_extpwr" class="label">Unknown</span></h4></td>
+                    </tr>
+                    <tr>
                         <td width="40%" style="vertical-align:middle;"><h3>Насос 1</h3><small id="pump1">(no value recieved)</small></td>
                         <td style="vertical-align:middle;"></td>
                         <td width="30%" style="vertical-align:middle;"><h4>&nbsp;<span id="label1" class="label">Unknown</span></h4></td>
@@ -220,11 +209,6 @@ $(document).ready(function() {
                         <td width="30%" style="vertical-align:middle;"><h4>&nbsp;<span id="pressureLabel" class="label">Unknown</span></h4></td>
                     </tr>
 
-                    <tr>
-                        <td width="40%" style="vertical-align:middle;"><h3>Basement temperature</h3><small id="basementTempSensor">(no value recieved)</small></td>
-                        <td style="vertical-align:middle;"><span class="basementTempSparkline"></span></td>
-                        <td width="30%" style="vertical-align:middle;"><h4>&nbsp;<span id="basementTempLabel" class="label">Unknown</span></h4></td>
-                    </tr>
                     </table>
               </div>
             </div>
