--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ var port = 9001;
 var topic_alarm = 'wt2/alarm/+';
 var topic_status = 'wt2/status/+';
 var topic_pressure = 'wt2/pressure';
+var topic_system = 'wt2/system/#';
 var useTLS = false;
 var cleansession = true;
 var mqtt;
@@ -66,6 +67,7 @@ function onConnect() {
     mqtt.subscribe(topic_alarm, {qos: 0});
     mqtt.subscribe(topic_status, {qos: 0});
     mqtt.subscribe(topic_pressure, {qos: 0});
+    mqtt.subscribe(topic_system, {qos: 0});
     $('#topic').html(topic_status);
 };
 
@@ -95,7 +97,7 @@ function onMessageArrived(message) {
             $('#label_extpwr').removeClass('label-danger').addClass('label-success');
         }
     }
-    if (type == 'status' && device == 'Pump1') {
+    else if (type == 'status' && device == 'Pump1') {
         $('#pump1').html('(value: ' + payload + ')');
         if (payload != 'on') {
             $('#label1').text('Вимкнений');
@@ -105,7 +107,7 @@ function onMessageArrived(message) {
             $('#label1').removeClass('label-danger').addClass('label-success');
         }
     }
-    if (type == 'status' && device == 'Pump2') {
+    else if (type == 'status' && device == 'Pump2') {
         $('#pump2').html('(value: ' + payload + ')');
         if (payload != 'on') {
             $('#label2').text('Вимкнений');
@@ -115,61 +117,64 @@ function onMessageArrived(message) {
             $('#label2').removeClass('label-danger').addClass('label-success');
         }
     }
+    else if (type == 'system') {
+        //TODO inform about online/offline status
+    }
+    else {
+        switch (type) {
+        case 'pressure':
+            $('#pressureSensor').html('(value: ' + payload + ')');
+            $('#pressureLabel').text(payload);
+            $('#pressureLabel').removeClass('').addClass('label-default');
 
-
-    switch (type) {
-    case 'pressure':
-        $('#pressureSensor').html('(value: ' + payload + ')');
-        $('#pressureLabel').text(payload);
-        $('#pressureLabel').removeClass('').addClass('label-default');
-
-        var entry = new Array();
-        entry.push(timestamp);
-        entry.push(parseFloat(payload));
-        pressure.push(entry);
-        if (pressure.length >= 120) { //shift old data
-            pressure.shift()
-        }
-
-        $('#pressureChart').empty();
-        var pressurePlot = $.jqplot ('pressureChart', [pressure], {
-            axesDefaults: {
-                labelRenderer: $.jqplot.CanvasAxisLabelRenderer,
-                /*tickOptions: {
-                    showMark: false,
-                    showGridline: false,
-                    show: false,
-                    showLabel: false,
-                }*/
-              },
-            grid: {
-                gridLineColor: '#FFFFFF',
-                borderWidth: 0,
-                shadow: false,
-            },
-            seriesDefaults: {
-                rendererOptions: {
-                    smooth: true
-                },
-                showMarker: false,
-                lineWidth: 2,
-              },
-              axes: {
-                xaxis: {
-                  renderer:$.jqplot.DateAxisRenderer,
-                  tickRenderer: $.jqplot.CanvasAxisTickRenderer,
-                  tickOptions: {formatString:'%H:%M:%S'},
-                  pad: 0
-                },
-                yaxis: {
-                    min: 0
-                }
+            var entry = new Array();
+            entry.push(timestamp);
+            entry.push(parseFloat(payload));
+            pressure.push(entry);
+            if (pressure.length >= 120) { //shift old data
+                pressure.shift()
             }
-        });
-        break;
 
-    default: console.log('Error: Data do not match the MQTT topic.');
-        break;
+            $('#pressureChart').empty();
+            var pressurePlot = $.jqplot ('pressureChart', [pressure], {
+                axesDefaults: {
+                    labelRenderer: $.jqplot.CanvasAxisLabelRenderer,
+                    /*tickOptions: {
+                        showMark: false,
+                        showGridline: false,
+                        show: false,
+                        showLabel: false,
+                    }*/
+                  },
+                grid: {
+                    gridLineColor: '#FFFFFF',
+                    borderWidth: 0,
+                    shadow: false,
+                },
+                seriesDefaults: {
+                    rendererOptions: {
+                        smooth: true
+                    },
+                    showMarker: false,
+                    lineWidth: 2,
+                  },
+                  axes: {
+                    xaxis: {
+                      renderer:$.jqplot.DateAxisRenderer,
+                      tickRenderer: $.jqplot.CanvasAxisTickRenderer,
+                      tickOptions: {formatString:'%H:%M:%S'},
+                      pad: 0
+                    },
+                    yaxis: {
+                        min: 0
+                    }
+                }
+            });
+            break;
+
+        default: console.log('Error: Data do not match the MQTT topic.');
+            break;
+        }
     }
 };
 
